--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -32,7 +32,7 @@ confirm_quit = off
 day_change = on
 day_change_time_format = "%a, %d %b %Y"
 eat_newline_glitch = off
-highlight = "bunny*"
+highlight = ""
 highlight_regex = ""
 highlight_tags = ""
 hotlist_add_buffer_if_away = on
