Cleaner IRC time formats

--- a/irc/weechat.symlink/urlgrab.conf
+++ b/irc/weechat.symlink/urlgrab.conf
@@ -17,5 +17,5 @@ localcmd = "open %s"
 method = "local"
 output_main_buffer = on
 remotecmd = "ssh -x localhost -i ~/.ssh/id_rsa -C "export DISPLAY=":0.0" &&  firefox %s""
-time_format = "%H:%M:%S"
+time_format = "%H:%M"
 url_log = "~/.weechat/urls.log"
