--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -17,7 +17,7 @@ bar_more_left = "<<"
 bar_more_right = ">>"
 bar_more_up = "--"
 buffer_notify_default = all
-buffer_time_format = "%H:%M:%S"
+buffer_time_format = "%H:%M"
 color_basic_force_bold = off
 color_inactive_buffer = off
 color_inactive_message = on
