--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -63,7 +63,7 @@ paste_bracketed_timer_delay = 10
 paste_max_lines = 1
 prefix_action = " *"
 prefix_align = right
-prefix_align_max = 15
+prefix_align_max = 8
 prefix_align_min = 0
 prefix_align_more = "+"
 prefix_buffer_align = right
@@ -209,6 +209,20 @@ isetbar.separator = on
 isetbar.size = 3
 isetbar.size_max = 3
 isetbar.type = window
+nicklist.color_bg = default
+nicklist.color_delim = cyan
+nicklist.color_fg = default
+nicklist.conditions = "nicklist"
+nicklist.filling_left_right = vertical
+nicklist.filling_top_bottom = columns_vertical
+nicklist.hidden = off
+nicklist.items = "buffer_nicklist"
+nicklist.position = right
+nicklist.priority = 200
+nicklist.separator = on
+nicklist.size = 0
+nicklist.size_max = 0
+nicklist.type = window
 status.color_bg = gray
 status.color_delim = green
 status.color_fg = black
@@ -484,6 +498,7 @@ meta-wmeta2-1;3A = "/window up"
 meta-wmeta2-1;3B = "/window down"
 meta-wmeta2-1;3C = "/window right"
 meta-wmeta2-1;3D = "/window left"
+meta-x = "/bar toggle nicklist"
 meta-z = "/window zoom"
 
 [key_search]
