Not liking that module

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,5 @@
 [submodule "vim/vim.symlink/bundle/vim-markdown"]
 	path = vim/vim.symlink/bundle/vim-markdown
 	url = git://github.com/plasticboy/vim-markdown.git
+	path = vim/vim.symlink/bundle/minibufexpl
+	url = git://github.com/fholgado/minibufexpl.vim.git
