--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -277,6 +277,7 @@ buffer = "irc;Furnet.#vegasfur;3"
 buffer = "irc;freenode.#pelican;4"
 buffer = "irc;Furnet.#bunnypad;5"
 buffer = "irc;syncnet.#vivisector;6"
+buffer = "irc;freenode.##re;7"
 window = "1;0;45;1;-;-"
 window = "2;1;0;0;irc;Anthrochat.#Hackerfurs"
 window = "3;1;50;1;-;-"
