--- a/irc/weechat.symlink/plugins.conf
+++ b/irc/weechat.symlink/plugins.conf
@@ -24,6 +24,8 @@ perl.beep.blacklist_nicks = ""
 perl.beep.whitelist_channels = ""
 perl.beep.whitelist_nicks = ""
 perl.check_license = "on"
+python.automode.enabled = "on"
+python.automode.freenode.#pelican.op = "alexis!~alexis@hack.lolnet.org,snowlprd!~snowlprd@67.43.165.205"
 python.check_license = "on"
 python.growl.hostname = ""
 python.growl.icon = "icon.png"
