--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,12 @@
 [submodule "vim/vim.symlink/bundle/iaVim"]
 	path = vim/vim.symlink/bundle/iaVim
 	url = git://github.com/laktek/distraction-free-writing-vim.git
+[submodule "vim/vim.symlink/bundle/pathogen"]
+	path = vim/vim.symlink/bundle/pathogen
+	url = git://github.com/tpope/vim-pathogen.git
+[submodule "vim/vim.symlink/bundle/vim-autoclose"]
+  path = vim/vim.symlink/bundle/vim-autoclose
+	url = git://github.com/andrewle/vim-autoclose.git
+[submodule "vim/vim.symlink/bundle/vim-virtualenv"]
+  path = vim/vim.symlink/bundle/vim-virtualenv
+	url = git://github.com/jmcantrell/vim-virtualenv.git
