--- a/.gitmodules
+++ b/.gitmodules
@@ -18,10 +18,10 @@
 	url = git://github.com/laktek/distraction-free-writing-vim.git
 [submodule "vim/vim.symlink/bundle/pathogen"]
 	path = vim/vim.symlink/bundle/pathogen
-	url = git://github.com/tpope/vim-pathogen.git
-[submodule "vim/vim.symlink/bundle/vim-autoclose"]
-  path = vim/vim.symlink/bundle/vim-autoclose
-	url = git://github.com/andrewle/vim-autoclose.git
+	url = https://github.com/tpope/vim-pathogen.git
 [submodule "vim/vim.symlink/bundle/vim-virtualenv"]
-  path = vim/vim.symlink/bundle/vim-virtualenv
-	url = git://github.com/jmcantrell/vim-virtualenv.git
+	path = vim/vim.symlink/bundle/vim-virtualenv
+	url = https://github.com/jmcantrell/vim-virtualenv.git
+[submodule "vim/vim.symlink/bundle/vim-autoclose"]
+	path = vim/vim.symlink/bundle/vim-autoclose
+	url = https://github.com/andrewle/vim-autoclose.git
