--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -16,7 +16,7 @@ bar_more_down = "++"
 bar_more_left = "<<"
 bar_more_right = ">>"
 bar_more_up = "--"
-buffer_notify_default = all
+buffer_notify_default = highlight
 buffer_time_format = "%H:%M"
 color_basic_force_bold = off
 color_inactive_buffer = off
@@ -280,17 +280,16 @@ buffer = "irc;syncnet.#vivisector;6"
 buffer = "irc;freenode.##re;7"
 window = "1;0;45;1;-;-"
 window = "2;1;0;0;irc;Anthrochat.#Hackerfurs"
-window = "3;1;50;1;-;-"
-window = "4;3;0;0;irc;freenode.#pelican"
-window = "5;3;0;0;irc;Furnet.#vegasfur"
+window = "3;1;0;0;irc;freenode.#pelican"
 
 [notify]
 irc.Anthrochat.#Hackerfurs = message
 irc.freenode.#calibre = none
 irc.freenode.#pelican = message
 irc.Furnet.#bunnypad = highlight
+irc.Furnet.#vegasfur = all
 irc.hak5.#hak5 = none
-irc.syncnet.#vivisector = message
+irc.syncnet.#vivisector = highlight
 
 [filter]
 
