--- a/irc/weechat.symlink/plugins.conf
+++ b/irc/weechat.symlink/plugins.conf
@@ -27,9 +27,9 @@ perl.check_license = "on"
 python.automode.enabled = "on"
 python.automode.freenode.#pelican.op = "alexis!~alexis@hack.lolnet.org,snowlprd!~snowlprd@67.43.165.205"
 python.check_license = "on"
-python.growl.hostname = ""
+python.growl.hostname = "localhost"
 python.growl.icon = "icon.png"
-python.growl.password = ""
+python.growl.password = "bunny"
 python.growl.show_channel_topic = "on"
 python.growl.show_dcc = "on"
 python.growl.show_highlighted_message = "on"
