Set up remote back to host for urls

--- a/irc/weechat.symlink/urlgrab.conf
+++ b/irc/weechat.symlink/urlgrab.conf
@@ -14,8 +14,8 @@ color_url_selected = black
 [default]
 historysize = 100
 localcmd = "open %s"
-method = "local"
+method = "remote"
 output_main_buffer = on
-remotecmd = "ssh -x localhost -i ~/.ssh/id_rsa -C "export DISPLAY=":0.0" &&  firefox %s""
+remotecmd = "ssh air open %s"
 time_format = "%H:%M"
 url_log = "~/.weechat/urls.log"
