Disable annoying mouse

--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -54,7 +54,7 @@ item_buffer_filter = "*"
 item_time_format = "%H:%M"
 jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
-mouse = on
+mouse = off
 mouse_timer_delay = 100
 nickmode = on
 nickmode_empty = off
