--- a/irc/weechat.symlink/aspell.conf
+++ b/irc/weechat.symlink/aspell.conf
@@ -1,5 +1,5 @@
 #
-# aspell.conf -- weechat v0.3.8
+# aspell.conf -- weechat v0.3.9
 #
 
 [look]
@@ -9,6 +9,7 @@ color = lightred
 commands = "ame,amsg,away,command,cycle,kick,kickban,me,msg,notice,part,query,quit,topic"
 default_dict = ""
 during_search = off
+enabled = off
 real_time = off
 word_min_length = 2
 
