--- a/irc/weechat.symlink/urlgrab.conf
+++ b/irc/weechat.symlink/urlgrab.conf
@@ -1,5 +1,5 @@
 #
-# urlgrab.conf -- weechat v0.3.8
+# urlgrab.conf -- weechat v0.3.9
 #
 
 [color]
@@ -16,6 +16,6 @@ historysize = 100
 localcmd = "open %s"
 method = "remote"
 output_main_buffer = on
-remotecmd = "ssh air open %s"
+remotecmd = "ssh air open '%s'"
 time_format = "%H:%M"
 url_log = "~/.weechat/urls.log"
