--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.3.8
+# weechat.conf -- weechat v0.3.9
 #
 
 [debug]
@@ -9,6 +9,7 @@ command_after_plugins = ""
 command_before_plugins = ""
 display_logo = on
 display_version = on
+sys_rlimit = ""
 
 [look]
 align_end_of_lines = message
@@ -25,6 +26,7 @@ color_inactive_prefix = on
 color_inactive_prefix_buffer = on
 color_inactive_time = off
 color_inactive_window = off
+color_nick_offline = off
 color_pairs_auto_reset = 5
 color_real_white = off
 command_chars = ""
@@ -54,10 +56,9 @@ item_buffer_filter = "*"
 item_time_format = "%H:%M"
 jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
+jump_smart_back_to_buffer = on
 mouse = off
 mouse_timer_delay = 100
-nickmode = on
-nickmode_empty = off
 paste_bracketed = off
 paste_bracketed_timer_delay = 10
 paste_max_lines = 1
@@ -88,6 +89,8 @@ separator_horizontal = "-"
 separator_vertical = ""
 set_title = on
 time_format = "%a, %d %b %Y %T"
+window_separator_horizontal = on
+window_separator_vertical = on
 
 [palette]
 
@@ -105,6 +108,9 @@ chat_inactive_buffer = darkgray
 chat_inactive_window = darkgray
 chat_nick = lightcyan
 chat_nick_colors = "cyan,magenta,green,brown,lightblue,default,lightcyan,lightmagenta,lightgreen,blue"
+chat_nick_offline = darkgray
+chat_nick_offline_highlight = default
+chat_nick_offline_highlight_bg = darkgray
 chat_nick_other = cyan
 chat_nick_self = red
 chat_prefix_action = lightmagenta
@@ -223,9 +229,9 @@ nicklist.separator = on
 nicklist.size = 0
 nicklist.size_max = 10
 nicklist.type = window
-status.color_bg = gray
+status.color_bg = black
 status.color_delim = green
-status.color_fg = black
+status.color_fg = default
 status.conditions = ""
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
@@ -273,15 +279,17 @@ buffer = "irc;server.Furnet;1"
 buffer = "irc;server.freenode;1"
 buffer = "irc;server.syncnet;1"
 buffer = "irc;Anthrochat.#Hackerfurs;2"
-buffer = "irc;freenode.#pelican;3"
-buffer = "irc;Furnet.#vegasfur;4"
-buffer = "irc;Furnet.#bunnypad;5"
-buffer = "irc;syncnet.#vivisector;6"
-buffer = "irc;freenode.##re;7"
+buffer = "irc;Anthrochat.#hf-ctf;3"
+buffer = "irc;freenode.#pelican;4"
+buffer = "irc;Furnet.#vegasfur;5"
+buffer = "irc;Furnet.#bunnypad;6"
+buffer = "irc;syncnet.#vivisector;7"
+buffer = "irc;freenode.##re;8"
 window = "1;0;0;0;irc;Anthrochat.#Hackerfurs"
 
 [notify]
 irc.Anthrochat.#Hackerfurs = message
+irc.Anthrochat.#hf-ctf = highlight
 irc.freenode.#calibre = none
 irc.freenode.#pelican = message
 irc.Furnet.#bunnypad = highlight
