--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -221,7 +221,7 @@ nicklist.color_fg = default
 nicklist.conditions = "nicklist"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
-nicklist.hidden = off
+nicklist.hidden = on
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
@@ -279,13 +279,12 @@ buffer = "irc;server.Furnet;1"
 buffer = "irc;server.freenode;1"
 buffer = "irc;server.syncnet;1"
 buffer = "irc;Anthrochat.#Hackerfurs;2"
-buffer = "irc;Anthrochat.#hf-ctf;3"
-buffer = "irc;freenode.#pelican;4"
-buffer = "irc;Furnet.#vegasfur;5"
-buffer = "irc;Furnet.#bunnypad;6"
-buffer = "irc;syncnet.#vivisector;7"
-buffer = "irc;freenode.##re;8"
-window = "1;0;0;0;irc;Anthrochat.#Hackerfurs"
+buffer = "irc;freenode.#pelican;3"
+buffer = "irc;Furnet.#vegasfur;4"
+buffer = "irc;Anthrochat.#hf-ctf;5"
+buffer = "irc;syncnet.#vivisector;6"
+buffer = "irc;freenode.##re;7"
+window = "1;0;0;0;irc;freenode.#pelican"
 
 [notify]
 irc.Anthrochat.#Hackerfurs = message
