--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -284,11 +284,11 @@ buffer = "irc;Furnet.#vegasfur;4"
 buffer = "irc;Anthrochat.#hf-ctf;5"
 buffer = "irc;syncnet.#vivisector;6"
 buffer = "irc;freenode.##re;7"
-window = "1;0;0;0;irc;freenode.#pelican"
+window = "1;0;0;0;irc;Anthrochat.#Hackerfurs"
 
 [notify]
 irc.Anthrochat.#Hackerfurs = message
-irc.Anthrochat.#hf-ctf = highlight
+irc.Anthrochat.#hf-ctf = message
 irc.freenode.#calibre = none
 irc.freenode.#pelican = message
 irc.Furnet.#bunnypad = highlight
