--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -279,16 +279,20 @@ buffer = "irc;server.Furnet;1"
 buffer = "irc;server.freenode;1"
 buffer = "irc;server.syncnet;1"
 buffer = "irc;Anthrochat.#Hackerfurs;2"
-buffer = "irc;freenode.#pelican;3"
-buffer = "irc;Furnet.#vegasfur;4"
-buffer = "irc;Anthrochat.#hf-ctf;5"
-buffer = "irc;syncnet.#vivisector;6"
-buffer = "irc;freenode.##re;7"
-window = "1;0;0;0;irc;Anthrochat.#Hackerfurs"
+buffer = "irc;Anthrochat.#velutinous;3"
+buffer = "irc;freenode.#pelican;4"
+buffer = "irc;Furnet.#vegasfur;5"
+buffer = "irc;Anthrochat.#hf-ctf;6"
+buffer = "irc;syncnet.#vivisector;7"
+buffer = "irc;Anthrochat.verix;8"
+window = "1;0;50;1;-;-"
+window = "2;1;0;0;irc;Anthrochat.#velutinous"
+window = "3;1;0;0;irc;Anthrochat.#Hackerfurs"
 
 [notify]
 irc.Anthrochat.#Hackerfurs = message
 irc.Anthrochat.#hf-ctf = message
+irc.Anthrochat.#velutinous = message
 irc.freenode.#calibre = none
 irc.freenode.#pelican = message
 irc.Furnet.#bunnypad = highlight
