Another weechat upgrade

--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.3.9.1
+# weechat.conf -- weechat v0.3.9.2
 #
 
 [debug]
@@ -284,10 +284,11 @@ buffer = "irc;freenode.#pelican;4"
 buffer = "irc;Furnet.#vegasfur;5"
 buffer = "irc;Anthrochat.#hf-ctf;6"
 buffer = "irc;syncnet.#vivisector;7"
-buffer = "irc;Anthrochat.verix;8"
+buffer = "irc;freenode.*status;8"
+buffer = "irc;Furnet.*status;9"
 window = "1;0;50;1;-;-"
-window = "2;1;0;0;irc;Anthrochat.#velutinous"
-window = "3;1;0;0;irc;Anthrochat.#Hackerfurs"
+window = "2;1;0;0;irc;freenode.#pelican"
+window = "3;1;0;0;irc;Anthrochat.#velutinous"
 
 [notify]
 irc.Anthrochat.#Hackerfurs = message
