--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "vim/vim.symlink/bundle/vim-autoclose"]
 	path = vim/vim.symlink/bundle/vim-autoclose
 	url = https://github.com/andrewle/vim-autoclose.git
+[submodule "vim/vim.symlink/bundle/vdebug"]
+	path = vim/vim.symlink/bundle/vdebug
+	url = git://github.com/joonty/vdebug.git
