--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -184,7 +184,7 @@ autoload = "*"
 debug = off
 extension = ".so"
 path = "%h/plugins"
-save_config_on_unload = on
+save_config_on_unload = off
 
 [bar]
 input.color_bg = default
@@ -296,9 +296,8 @@ irc.Anthrochat.#hf-ctf = message
 irc.Anthrochat.#velutinous = message
 irc.freenode.#calibre = none
 irc.freenode.#pelican = message
-irc.Furnet.#bunnypad = highlight
 irc.Furnet.#vegasfur = all
-irc.hak5.#hak5 = none
+irc.syncnet.#newznab = highlight
 irc.syncnet.#vivisector = highlight
 
 [filter]
@@ -316,14 +315,14 @@ ctrl-Cu = "/input insert \x15"
 ctrl-D = "/input delete_next_char"
 ctrl-E = "/input move_end_of_line"
 ctrl-F = "/input move_next_char"
-ctrl-H = "/input delete_previous_char"
+ctrl-H = "/buffer -1"
 ctrl-I = "/input complete_next"
-ctrl-J = "/input return"
-ctrl-K = "/input delete_end_of_line"
-ctrl-L = "/window refresh"
+ctrl-J = "/window down"
+ctrl-K = "/window up"
+ctrl-L = "/buffer +1"
 ctrl-M = "/input return"
-ctrl-N = "/buffer +1"
-ctrl-P = "/buffer -1"
+ctrl-N = "/window scroll_next_highlight"
+ctrl-P = "/window scroll_previous_highlight"
 ctrl-R = "/input search_text"
 ctrl-Sctrl-U = "/input set_unread"
 ctrl-T = "/input transpose_chars"
@@ -343,6 +342,7 @@ meta-meta2-A = "/buffer -1"
 meta-meta2-B = "/buffer +1"
 meta-meta2-C = "/buffer +1"
 meta-meta2-D = "/buffer -1"
+meta-/ = "/input jump_last_buffer_displayed"
 meta-0 = "/buffer *10"
 meta-1 = "/buffer *1"
 meta-2 = "/buffer *2"
@@ -356,6 +356,12 @@ meta-9 = "/buffer *9"
 meta-< = "/input jump_previously_visited_buffer"
 meta-= = "/filter toggle"
 meta-> = "/input jump_next_visited_buffer"
+meta-OA = "/input history_global_previous"
+meta-OB = "/input history_global_next"
+meta-OC = "/input move_next_word"
+meta-OD = "/input move_previous_word"
+meta-OF = "/input move_end_of_line"
+meta-OH = "/input move_beginning_of_line"
 meta-Oa = "/input history_global_previous"
 meta-Ob = "/input history_global_next"
 meta-Oc = "/input move_next_word"
@@ -368,14 +374,22 @@ meta2-1;3A = "/buffer -1"
 meta2-1;3B = "/buffer +1"
 meta2-1;3C = "/buffer +1"
 meta2-1;3D = "/buffer -1"
+meta2-1;5A = "/input history_global_previous"
+meta2-1;5B = "/input history_global_next"
+meta2-1;5C = "/input move_next_word"
+meta2-1;5D = "/input move_previous_word"
 meta2-1~ = "/input move_beginning_of_line"
+meta2-200~ = "/input paste_start"
+meta2-201~ = "/input paste_stop"
 meta2-20~ = "/bar scroll title * x-50%"
 meta2-21~ = "/bar scroll title * x+50%"
 meta2-23~ = "/bar scroll nicklist * y-100%"
 meta2-24~ = "/bar scroll nicklist * y+100%"
 meta2-3~ = "/input delete_next_char"
 meta2-4~ = "/input move_end_of_line"
+meta2-5;3~ = "/window scroll_up"
 meta2-5~ = "/window page_up"
+meta2-6;3~ = "/window scroll_down"
 meta2-6~ = "/window page_down"
 meta2-7~ = "/input move_beginning_of_line"
 meta2-8~ = "/input move_end_of_line"
@@ -388,6 +402,8 @@ meta2-G = "/window page_down"
 meta2-H = "/input move_beginning_of_line"
 meta2-I = "/window page_up"
 meta2-Z = "/input complete_previous"
+meta2-[E = "/buffer -1"
+meta-_ = "/input redo"
 meta-a = "/input jump_smart"
 meta-b = "/input move_previous_word"
 meta-d = "/input delete_next_word"
@@ -496,9 +512,11 @@ meta-j97 = "/buffer 97"
 meta-j98 = "/buffer 98"
 meta-j99 = "/buffer 99"
 meta-k = "/input grab_key_command"
+meta-m = "/mute mouse toggle"
 meta-n = "/window scroll_next_highlight"
 meta-p = "/window scroll_previous_highlight"
 meta-r = "/input delete_line"
+meta-s = "/mute aspell toggle"
 meta-u = "/input scroll_unread"
 meta-wmeta-meta2-A = "/window up"
 meta-wmeta-meta2-B = "/window down"
@@ -508,8 +526,11 @@ meta-wmeta2-1;3A = "/window up"
 meta-wmeta2-1;3B = "/window down"
 meta-wmeta2-1;3C = "/window right"
 meta-wmeta2-1;3D = "/window left"
+meta-wmeta-b = "/window balance"
+meta-wmeta-s = "/window swap"
 meta-x = "/bar toggle nicklist"
 meta-z = "/window zoom"
+ctrl-_ = "/input undo"
 
 [key_search]
 ctrl-J = "/input search_stop"
@@ -548,6 +569,10 @@ meta2-D = "/cursor move left"
 @bar(nicklist):button1-gesture-down-long = "/bar scroll nicklist ${_window_number} e"
 @bar(nicklist):button1-gesture-up = "/bar scroll nicklist ${_window_number} -100%"
 @bar(nicklist):button1-gesture-up-long = "/bar scroll nicklist ${_window_number} b"
+@chat(script.scripts):button1 = "/script go ${_chat_line_y}"
+@chat(script.scripts):button2 = "/script go ${_chat_line_y};/script installremove -q ${script_name_with_extension}"
+@chat(script.scripts):wheeldown = "/script down 5"
+@chat(script.scripts):wheelup = "/script up 5"
 @item(buffer_nicklist):button1 = "/window ${_window_number};/query ${nick}"
 @item(buffer_nicklist):button1-gesture-left = "/window ${_window_number};/kick ${nick}"
 @item(buffer_nicklist):button1-gesture-left-long = "/window ${_window_number};/kickban ${nick}"
@@ -560,6 +585,8 @@ meta2-D = "/cursor move left"
 @chat:button1-gesture-left-long = "/window ${_window_number};/buffer 1"
 @chat:button1-gesture-right = "/window ${_window_number};/buffer +1"
 @chat:button1-gesture-right-long = "/window ${_window_number};/input jump_last_buffer"
+@chat:ctrl-wheeldown = "/window scroll_horiz -window ${_window_number} +10%"
+@chat:ctrl-wheelup = "/window scroll_horiz -window ${_window_number} -10%"
 @chat:wheeldown = "/window scroll_down -window ${_window_number}"
 @chat:wheelup = "/window scroll_up -window ${_window_number}"
 @*:button3 = "/cursor go ${_x},${_y}"
