Updating chan list

--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -280,12 +280,12 @@ buffer = "irc;server.freenode;1"
 buffer = "irc;server.syncnet;1"
 buffer = "irc;Anthrochat.#Hackerfurs;2"
 buffer = "irc;Anthrochat.#velutinous;3"
-buffer = "irc;freenode.#pelican;4"
-buffer = "irc;Furnet.#vegasfur;5"
-buffer = "irc;Anthrochat.#hf-ctf;6"
-buffer = "irc;syncnet.#vivisector;7"
-buffer = "irc;freenode.*status;8"
-buffer = "irc;Furnet.*status;9"
+buffer = "irc;Anthrochat.#hf-ctf;4"
+buffer = "irc;syncnet.#vivisector;5"
+buffer = "irc;syncnet.#newznab;6"
+buffer = "irc;freenode.#palaver;7"
+buffer = "irc;Furnet.#vegasfur;8"
+buffer = "irc;freenode.#pelican;9"
 window = "1;0;50;1;-;-"
 window = "2;1;0;0;irc;freenode.#pelican"
 window = "3;1;0;0;irc;Anthrochat.#velutinous"
