--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -236,7 +236,7 @@ status.conditions = ""
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
 status.hidden = off
-status.items = "[buffer_count],[buffer_plugin],buffer_number+:+buffer_name+{buffer_nicklist_count}+buffer_filter,[lag],[hotlist],completion,scroll"
+status.items = "[buffer_count],[buffer_plugin],buffer_number+:+buffer_name+{buffer_nicklist_count}+buffer_filter,[hotlist],completion,scroll"
 status.position = bottom
 status.priority = 500
 status.separator = off
@@ -286,8 +286,8 @@ buffer = "irc;syncnet.#newznab;6"
 buffer = "irc;freenode.#palaver;7"
 buffer = "irc;Furnet.#vegasfur;8"
 buffer = "irc;freenode.#pelican;9"
-window = "1;0;50;1;-;-"
-window = "2;1;0;0;irc;freenode.#pelican"
+window = "1;0;40;1;-;-"
+window = "2;1;0;0;irc;Anthrochat.#Hackerfurs"
 window = "3;1;0;0;irc;Anthrochat.#velutinous"
 
 [notify]
