--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.3.9.2
+# weechat.conf -- weechat v0.4.0
 #
 
 [debug]
@@ -279,15 +279,15 @@ buffer = "irc;server.Furnet;1"
 buffer = "irc;server.freenode;1"
 buffer = "irc;server.syncnet;1"
 buffer = "irc;Anthrochat.#Hackerfurs;2"
-buffer = "irc;Anthrochat.#velutinous;3"
-buffer = "irc;Anthrochat.#hf-ctf;4"
-buffer = "irc;syncnet.#vivisector;5"
-buffer = "irc;syncnet.#newznab;6"
-buffer = "irc;freenode.#palaver;7"
-buffer = "irc;Furnet.#vegasfur;8"
-buffer = "irc;freenode.#pelican;9"
+buffer = "irc;freenode.#pelican;3"
+buffer = "irc;Anthrochat.#velutinous;4"
+buffer = "irc;freenode.#palaver;5"
+buffer = "irc;syncnet.#vivisector;6"
+buffer = "irc;Furnet.#vegasfur;7"
+buffer = "irc;syncnet.#newznab;8"
+buffer = "irc;Anthrochat.#hf-ctf;9"
 window = "1;0;40;1;-;-"
-window = "2;1;0;0;irc;Anthrochat.#Hackerfurs"
+window = "2;1;0;0;irc;freenode.#pelican"
 window = "3;1;0;0;irc;Anthrochat.#velutinous"
 
 [notify]
