--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -300,6 +300,7 @@ irc.syncnet.#newznab = highlight
 irc.syncnet.#vivisector = highlight
 
 [filter]
+joinquit = on;*#python,*#vivisector,*#palaver,*#newznab;irc_join,irc_part,irc_quit;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
