--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -281,14 +281,13 @@ buffer = "irc;server.syncnet;1"
 buffer = "irc;Anthrochat.#Hackerfurs;2"
 buffer = "irc;freenode.#pelican;3"
 buffer = "irc;Anthrochat.#velutinous;4"
-buffer = "irc;freenode.#palaver;5"
-buffer = "irc;syncnet.#vivisector;6"
-buffer = "irc;Furnet.#vegasfur;7"
-buffer = "irc;syncnet.#newznab;8"
-buffer = "irc;Anthrochat.#hf-ctf;9"
-window = "1;0;40;1;-;-"
-window = "2;1;0;0;irc;freenode.#pelican"
-window = "3;1;0;0;irc;Anthrochat.#velutinous"
+buffer = "irc;freenode.#python;5"
+buffer = "irc;Furnet.#vegasfur;6"
+buffer = "irc;Anthrochat.#hf-ctf;7"
+buffer = "irc;syncnet.#vivisector;8"
+buffer = "irc;freenode.#palaver;9"
+buffer = "irc;syncnet.#newznab;10"
+window = "1;0;0;0;irc;freenode.#pelican"
 
 [notify]
 irc.Anthrochat.#Hackerfurs = message
