--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -287,7 +287,8 @@ buffer = "irc;Anthrochat.#hf-ctf;7"
 buffer = "irc;syncnet.#vivisector;8"
 buffer = "irc;freenode.#palaver;9"
 buffer = "irc;syncnet.#newznab;10"
-window = "1;0;0;0;irc;freenode.#pelican"
+buffer = "irc;Anthrochat.charon;11"
+window = "1;0;0;0;irc;Anthrochat.#Hackerfurs"
 
 [notify]
 irc.Anthrochat.#Hackerfurs = message
