--- a/.gitmodules
+++ b/.gitmodules
@@ -13,9 +13,6 @@
 [submodule "vim/vim.symlink/bundle/vim-markdown"]
 	path = vim/vim.symlink/bundle/vim-markdown
 	url = git://github.com/plasticboy/vim-markdown.git
-[submodule "vim/vim.symlink/bundle/iaVim"]
-	path = vim/vim.symlink/bundle/iaVim
-	url = git://github.com/laktek/distraction-free-writing-vim.git
 [submodule "vim/vim.symlink/bundle/pathogen"]
 	path = vim/vim.symlink/bundle/pathogen
 	url = https://github.com/tpope/vim-pathogen.git
@@ -43,3 +40,6 @@
 [submodule "vim/vim.symlink/bundle/powerline"]
 	path = vim/vim.symlink/bundle/powerline
 	url = git://github.com/Lokaltog/powerline.git
+[submodule "vim/vim.symlink/bundle/vim-fugitive"]
+	path = vim/vim.symlink/bundle/vim-fugitive
+	url = git://github.com/tpope/vim-fugitive.git
