--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -221,7 +221,7 @@ nicklist.color_fg = default
 nicklist.conditions = "nicklist"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
-nicklist.hidden = on
+nicklist.hidden = off
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
@@ -277,17 +277,15 @@ buffer = "core;weechat;1"
 buffer = "irc;server.Anthrochat;1"
 buffer = "irc;server.Furnet;1"
 buffer = "irc;server.freenode;1"
-buffer = "irc;server.syncnet;1"
 buffer = "irc;Anthrochat.#Hackerfurs;2"
 buffer = "irc;freenode.#pelican;3"
 buffer = "irc;Anthrochat.#velutinous;4"
 buffer = "irc;freenode.#python;5"
 buffer = "irc;Furnet.#vegasfur;6"
 buffer = "irc;Anthrochat.#hf-ctf;7"
-buffer = "irc;syncnet.#vivisector;8"
-buffer = "irc;freenode.#palaver;9"
-buffer = "irc;syncnet.#newznab;10"
-window = "1;0;0;0;irc;freenode.#python"
+buffer = "irc;freenode.#palaver;8"
+buffer = "irc;freenode.#pocoo;9"
+window = "1;0;0;0;irc;Anthrochat.#Hackerfurs"
 
 [notify]
 irc.Anthrochat.#Hackerfurs = message
@@ -301,6 +299,7 @@ irc.syncnet.#vivisector = highlight
 [filter]
 joinquit = on;*#python,*#vivisector,*#palaver,*#newznab;irc_join,irc_part,irc_quit;*
 pjoinquit = on;*#pelican;irc_join,irc_part,irc_quit;*
+quiet = on;*;irc_join,irc_part,irc_quit;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
