--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,9 @@
 [submodule "vim/vim.symlink/bundle/vim-fugitive"]
 	path = vim/vim.symlink/bundle/vim-fugitive
 	url = git://github.com/tpope/vim-fugitive.git
+[submodule "emacs/emacs.d.symlink/solarized"]
+	path = emacs/emacs.d.symlink/solarized
+	url = git://github.com/sellout/emacs-color-theme-solarized.git
+[submodule "emacs/emacs.d.symlink/markdown-mode"]
+	path = emacs/emacs.d.symlink/markdown-mode
+	url = git://jblevins.org/git/markdown-mode.git
