--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.4.0
+# weechat.conf -- weechat v0.4.1
 #
 
 [debug]
@@ -59,6 +59,8 @@ jump_previous_buffer_when_closing = on
 jump_smart_back_to_buffer = on
 mouse = off
 mouse_timer_delay = 100
+nick_prefix = ""
+nick_suffix = ""
 paste_bracketed = off
 paste_bracketed_timer_delay = 10
 paste_max_lines = 1
@@ -67,9 +69,11 @@ prefix_align = right
 prefix_align_max = 8
 prefix_align_min = 0
 prefix_align_more = "+"
+prefix_align_more_after = on
 prefix_buffer_align = right
 prefix_buffer_align_max = 0
 prefix_buffer_align_more = "+"
+prefix_buffer_align_more_after = on
 prefix_error = "=!="
 prefix_join = "-->"
 prefix_network = "--"
@@ -112,7 +116,9 @@ chat_nick_offline = darkgray
 chat_nick_offline_highlight = default
 chat_nick_offline_highlight_bg = darkgray
 chat_nick_other = cyan
+chat_nick_prefix = green
 chat_nick_self = red
+chat_nick_suffix = green
 chat_prefix_action = lightmagenta
 chat_prefix_buffer = brown
 chat_prefix_buffer_inactive_buffer = darkgray
@@ -273,19 +279,23 @@ urlbar.size_max = 0
 urlbar.type = root
 
 [layout]
-buffer = "core;weechat;1"
-buffer = "irc;server.Anthrochat;1"
-buffer = "irc;server.Furnet;1"
-buffer = "irc;server.freenode;1"
-buffer = "irc;Anthrochat.#Hackerfurs;2"
-buffer = "irc;freenode.#pelican;3"
-buffer = "irc;Anthrochat.#velutinous;4"
-buffer = "irc;freenode.#python;5"
-buffer = "irc;Furnet.#vegasfur;6"
-buffer = "irc;Anthrochat.#hf-ctf;7"
-buffer = "irc;freenode.#palaver;8"
-buffer = "irc;freenode.#pocoo;9"
-window = "1;0;0;0;irc;Anthrochat.#Hackerfurs"
+default.buffer = "core;weechat;1"
+default.buffer = "irc;server.Anthrochat;1"
+default.buffer = "irc;server.Furnet;1"
+default.buffer = "irc;server.freenode;1"
+default.buffer = "irc;server.syncnet;1"
+default.buffer = "irc;Anthrochat.#Hackerfurs;2"
+default.buffer = "irc;freenode.#pelican;3"
+default.buffer = "irc;Anthrochat.#velutinous;4"
+default.buffer = "irc;freenode.#python;5"
+default.buffer = "irc;Furnet.#vegasfur;6"
+default.buffer = "irc;Anthrochat.#hf-ctf;7"
+default.buffer = "irc;freenode.#palaver;8"
+default.buffer = "irc;freenode.#pocoo;9"
+default.buffer = "irc;syncnet.#vivisector;10"
+default.buffer = "irc;Anthrochat.*status;11"
+default.window = "1;0;0;0;irc;server.syncnet"
+default.current = on
 
 [notify]
 irc.Anthrochat.#Hackerfurs = message
