--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -293,7 +293,7 @@ default.buffer = "irc;Anthrochat.#hf-ctf;7"
 default.buffer = "irc;freenode.#palaver;8"
 default.buffer = "irc;freenode.#pocoo;9"
 default.buffer = "irc;syncnet.#vivisector;10"
-default.window = "1;0;0;0;irc;Anthrochat.#Hackerfurs"
+default.window = "1;0;0;0;irc;freenode.#pelican"
 default.current = on
 
 [notify]
