Little irc changes

--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -289,11 +289,14 @@ default.buffer = "irc;freenode.#pelican;3"
 default.buffer = "irc;Anthrochat.#velutinous;4"
 default.buffer = "irc;freenode.#python;5"
 default.buffer = "irc;Furnet.#vegasfur;6"
-default.buffer = "irc;Anthrochat.#hf-ctf;7"
-default.buffer = "irc;freenode.#palaver;8"
-default.buffer = "irc;freenode.#pocoo;9"
-default.buffer = "irc;syncnet.#vivisector;10"
-default.window = "1;0;0;0;irc;freenode.#pelican"
+default.buffer = "irc;freenode.#palaver;7"
+default.buffer = "irc;freenode.#pocoo;8"
+default.buffer = "irc;syncnet.#vivisector;9"
+default.buffer = "irc;freenode.#chef;10"
+default.buffer = "irc;freenode.#learnchef;11"
+default.buffer = "irc;Anthrochat.charon;12"
+default.buffer = "irc;freenode.*status;13"
+default.window = "1;0;0;0;irc;Anthrochat.#velutinous"
 default.current = on
 
 [notify]
