Rename tf to muck to show the change to tintin
Also loose the virtenv banner, I don't need it anmymore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-tf/tf-dir.symlink/tiny.world
+muck/tf-dir.symlink/tiny.world
+muck/accounts.tin
 vim/vim.symlink/backups
 gitconfig.symlink
 irc/weechat.symlink/logs
