--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -292,11 +292,7 @@ default.buffer = "irc;Furnet.#vegasfur;6"
 default.buffer = "irc;freenode.#palaver;7"
 default.buffer = "irc;freenode.#pocoo;8"
 default.buffer = "irc;syncnet.#vivisector;9"
-default.buffer = "irc;freenode.#chef;10"
-default.buffer = "irc;freenode.#learnchef;11"
-default.buffer = "irc;Anthrochat.charon;12"
-default.buffer = "irc;freenode.*status;13"
-default.window = "1;0;0;0;irc;Anthrochat.#velutinous"
+default.window = "1;0;0;0;irc;Anthrochat.#Hackerfurs"
 default.current = on
 
 [notify]
