--- a/i3wm/i3.symlink/config
+++ b/i3wm/i3.symlink/config
@@ -131,7 +131,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command i3status -c ~/.i3/i3status.conf
 }
 
 workspace 1 output DVI-0
