--- a/i3wm/i3.symlink/i3status.conf
+++ b/i3wm/i3.symlink/i3status.conf
@@ -20,14 +20,14 @@ order += "load"
 order += "tztime local"
 
 wireless wlan0 {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+        format_up = "W: %essid %ip (%quality@%bitrate)"
+        format_down = "W"
 }
 
 ethernet eth0 {
         # if you use %speed, i3status requires root privileges
         format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+        format_down = "E"
 }
 
 battery 1 {
@@ -36,7 +36,8 @@ battery 1 {
 }
 
 run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
+        pidfile = "/var/run/ppp0.pid"
+        format = "%title"
 }
 
 tztime local {
@@ -44,7 +45,7 @@ tztime local {
 }
 
 load {
-        format = "%1min %5min %15min"
+        format = "%1min"
 }
 
 disk "/" {
