Chat config updates

--- a/irc/weechat.symlink/weechat.conf
+++ b/irc/weechat.symlink/weechat.conf
@@ -281,29 +281,32 @@ urlbar.type = root
 [layout]
 default.buffer = "core;weechat;1"
 default.buffer = "irc;server.Anthrochat;1"
-default.buffer = "irc;server.Furnet;1"
+default.buffer = "irc;server.furold;1"
 default.buffer = "irc;server.freenode;1"
 default.buffer = "irc;server.syncnet;1"
+default.buffer = "irc;server.FurNet;1"
 default.buffer = "irc;Anthrochat.#Hackerfurs;2"
 default.buffer = "irc;freenode.#pelican;3"
 default.buffer = "irc;Anthrochat.#velutinous;4"
 default.buffer = "irc;freenode.#python;5"
-default.buffer = "irc;Furnet.#vegasfur;6"
-default.buffer = "irc;freenode.#palaver;7"
-default.buffer = "irc;freenode.#pocoo;8"
-default.buffer = "irc;syncnet.#vivisector;9"
-default.buffer = "irc;freenode.#chef;10"
-default.buffer = "irc;freenode.#learnchef;11"
-default.buffer = "irc;Anthrochat.charon;12"
+default.buffer = "irc;syncnet.#vivisector;6"
+default.buffer = "irc;FurNet.#vegasfur;7"
+default.buffer = "irc;FurNet.#AdultAnthro;8"
+default.buffer = "irc;FurNet.kieran;9"
+default.buffer = "irc;Anthrochat.Alastair;10"
+default.buffer = "irc;syncnet.Kindri;11"
 default.window = "1;0;0;0;irc;Anthrochat.#Hackerfurs"
 default.current = on
+_zoom.window = "1;0;0;0;irc;FurNet.#AdultAnthro"
 
 [notify]
 irc.Anthrochat.#Hackerfurs = message
 irc.Anthrochat.#hf-ctf = message
 irc.Anthrochat.#velutinous = message
-irc.freenode.#pelican = message
+irc.freenode.#pelican = highlight
+irc.FurNet.#AdultAnthro = message
 irc.Furnet.#vegasfur = all
+irc.server.FurNet = none
 irc.syncnet.#newznab = highlight
 irc.syncnet.#vivisector = highlight
 
