--- a/irc/weechat.symlink/plugins.conf
+++ b/irc/weechat.symlink/plugins.conf
@@ -53,6 +53,15 @@ python.urlbar.time_format = "%H:%M"
 python.urlbar.use_popup = "on"
 python.urlbar.visible_amount = "5"
 python.urlbar.visible_seconds = "5"
+python.weetweet.alt_rt_style = "off"
+python.weetweet.auth_complete = "off"
+python.weetweet.home_replies = "off"
+python.weetweet.last_id = ""
+python.weetweet.oauth_secret = ""
+python.weetweet.oauth_token = ""
+python.weetweet.print_id = "on"
+python.weetweet.screen_name = ""
+python.weetweet.tweet_nicks = "on"
 ruby.check_license = "on"
 tcl.check_license = "on"
 
