--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
+# Old muck stufff
 muck/tf-dir.symlink/tiny.world
 muck/accounts.tin
-vim/vim.symlink/backups
-vim/vim.symlink/bundle
 .netrwhist
 
+# Vim folder
+vim/vim.symlink/backups
+vim/vim.symlink/bundle
+
+# Chef
 .kitchen/
 nodes/
+
+# fish
+fish_history
+fishd.*
+generated_completions
