Make copy in tmux go to osx

--- a/tmux.conf
+++ b/tmux.conf
@@ -52,7 +52,10 @@ bind L resize-pane -R 5
 # vim movement in C-[ mode
 setw -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'y' copy-pipe "pbcopy"
+
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "pbcopy"
 
 ## Status Bar
 set -g status on
