--- a/tmux.conf
+++ b/tmux.conf
@@ -4,10 +4,7 @@ bind C-a send-prefix
 unbind C-b
 
 # I demand trackpad respect
-setw -g mode-mouse on
-set -g mouse-select-pane off
-set -g mouse-resize-pane on
-set -g mouse-select-window off
+set -g mouse on
 
 # Change command delay short
 set-option -sg escape-time 1
