tmux status power

--- a/tmux.conf
+++ b/tmux.conf
@@ -57,11 +57,20 @@ bind-key -t vi-copy Enter copy-pipe "pbcopy"
 ## Status Bar
 set -g status on
 set -g status-utf8 on
-set -g status-interval 1
+set -g status-interval 20
 set -g status-bg colour234
 set -g status-fg colour248
 setw -g monitor-activity on
+setw -g automatic-rename on
 set -g visual-activity on
+
+set-window-option -g window-status-current-bg green
+set-window-option -g window-status-current-fg black
+
+set -g status-justify centre
+
+set -g status-left-length 18
+set -g status-left '#(uptime | cut -d " " -f 10-)'
 
 set-option -g pane-active-border-bg yellow
 set-option -g pane-active-border-fg yellow
