--- a/tmux.conf
+++ b/tmux.conf
@@ -70,7 +70,7 @@ set-window-option -g window-status-current-fg black
 set -g status-justify centre
 
 set -g status-left-length 18
-set -g status-left '#(uptime | cut -d " " -f 10-)'
+set -g status-left '#(uptime | cut -d ":" -f 4-)'
 
 set-option -g pane-active-border-bg yellow
 set-option -g pane-active-border-fg yellow
