Getting fancy with tmux statusline in my post powerline world

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,12 @@ set -g prefix C-a
 bind C-a send-prefix
 unbind C-b
 
+#termset
+set -g utf8 on
+setw -g utf8 on
+set -g status-utf8 on
+set -g default-terminal "screen-256color"
+
 # I demand trackpad respect
 set -g mouse on
 
@@ -16,7 +22,11 @@ setw -g pane-base-index 1
 set-option -g set-titles on
 #set-option -g set-titles-string '[#S:#I #H] #W'  # use screen title
 
-# Bind stuff up
+# focus events enabled for terminals that support them
+set -g focus-events on
+
+# super useful when using "grouped sessions" and multi-monitor setup
+setw -g aggressive-resize on
 
 # Fuck you spacebar
 unbind Space
@@ -56,13 +66,13 @@ bind-key -t vi-copy Enter copy-pipe "pbcopy"
 
 ## Status Bar
 set -g status on
-set -g status-utf8 on
 set -g status-interval 20
-set -g status-bg colour234
-set -g status-fg colour248
 setw -g monitor-activity on
 setw -g automatic-rename on
 set -g visual-activity on
+
+set -g status-bg colour234
+set -g status-fg colour248
 
 set-window-option -g window-status-current-bg green
 set-window-option -g window-status-current-fg black
@@ -72,12 +82,20 @@ set -g status-justify centre
 set -g status-left-length 18
 set -g status-left '#(uptime | cut -d ":" -f 4-)'
 
+set -g status-right ' #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+
 set-option -g pane-active-border-bg yellow
 set-option -g pane-active-border-fg yellow
 
-#termset
-set -g default-terminal "screen-256color"
-setw -g utf8 on
-
 # Sometimes we need to be local
- if '[ -f $HOME/.tmux.local.conf ]' 'source $HOME/.tmux.local.conf'
+if '[ -f $HOME/.tmux.local.conf ]' 'source $HOME/.tmux.local.conf'
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @batt_discharging_icon "🎍 "
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
