--- a/tmux.conf
+++ b/tmux.conf
@@ -97,8 +97,10 @@ set -g @batt_discharging_icon "🎍 "
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
+set -g @resurrect-strategy-vim 'session'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
+set -g @continuum-save-interval '60'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
