add no proxy to maybe fix up my chef woes

--- a/kitchen/config.yml
+++ b/kitchen/config.yml
@@ -40,6 +40,7 @@ end
 driver:
   http_proxy: <%= http_proxy_url %>
   https_proxy: <%= http_proxy_url %>
+  no_proxy: 'localhost,127.0.0.1'
   # used in kitchen-docker to pre-install/cache a Chef Ommnibus package in a
   # layer before booting containers
   provision_command: "env http_proxy=<%= http_proxy_url %> bash -c 'curl -L http://www.chef.io/chef/install.sh | bash'"
