Move dotfiles to a custom resource & enable secrets in run

--- a/tmux.conf
+++ b/tmux.conf
@@ -85,7 +85,7 @@ set-option -g pane-active-border-bg yellow
 set-option -g pane-active-border-fg yellow
 
 # Sometimes we need to be local
-if '[ -f $HOME/.tmux.local.conf ]' 'source $HOME/.tmux.local.conf'
+if '[ -f $HOME/.tmux.local ]' 'source $HOME/.tmux.local'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
