--- a/tmux.conf
+++ b/tmux.conf
@@ -55,11 +55,6 @@ bind L resize-pane -R 5
 
 # vim movement in C-[ mode
 setw -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-pipe "pbcopy"
-
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "pbcopy"
 
 ## Status Bar
 set -g status on
@@ -86,6 +81,7 @@ set-option -g pane-active-border-fg yellow
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @batt_discharging_icon "🎍 "
 set -g @plugin 'tmux-plugins/tmux-resurrect'
