--- a/tmux.conf
+++ b/tmux.conf
@@ -35,14 +35,6 @@ bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 bind | split-window -h
 bind - split-window -v
 
-# Smart pane switching with awareness of vim splits This is linked to the vim-tmux plugin
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-
 #ctrl-vim for window
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
@@ -81,6 +73,7 @@ set-option -g pane-active-border-fg yellow
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @batt_discharging_icon "🎍 "
