Switch to dein plugins and wipe old settings dir

--- a/tmux.conf
+++ b/tmux.conf
@@ -47,6 +47,8 @@ bind L resize-pane -R 5
 
 # vim movement in C-[ mode
 setw -g mode-keys vi
+# bind-key -t vi-copy 'v' begin-selection
+# bind-key -t vi-copy 'y' copy-selection
 
 ## Status Bar
 set -g status on
@@ -75,6 +77,7 @@ set-option -g pane-active-border-fg yellow
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @shell_mode 'vi'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @batt_discharging_icon "🎍 "
 set -g @plugin 'tmux-plugins/tmux-resurrect'
