--- a/kitchen/config.yml
+++ b/kitchen/config.yml
@@ -36,7 +36,7 @@ ensure
 end
 %>
 ---
-<% if proxy_running? %>
+<% raise 'proxy is not running' unless proxy_running? %>
 driver:
   http_proxy: <%= http_proxy_url %>
   https_proxy: <%= http_proxy_url %>
@@ -49,4 +49,3 @@ provisioner:
   # installs from an http:// source to enable better caching through
   # http_proxy, and yes, this is a bit evil
   chef_omnibus_url: http://www.chef.io/chef/install.sh
-<% end %>
