--- a/tmux.conf
+++ b/tmux.conf
@@ -47,8 +47,8 @@ bind L resize-pane -R 5
 
 # vim movement in C-[ mode
 setw -g mode-keys vi
-# bind-key -t vi-copy 'v' begin-selection
-# bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
 
 ## Status Bar
 set -g status on
@@ -76,6 +76,7 @@ set-option -g pane-active-border-fg yellow
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @shell_mode 'vi'
 set -g @plugin 'tmux-plugins/tmux-battery'
