NVIM is fixed, add tagbar & go-deoplete, sierra clipboard fixes

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,9 @@ unbind C-b
 #termset
 set -g default-terminal "screen-256color"
 
+# Fix pasteboard in Sierra
+set-option -g default-command "reattach-to-user-namespace -l fish"
+
 # I demand trackpad respect
 set -g mouse on
 
