Redo tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,42 +1,22 @@
 # Change Prefix to C-a since I use caps-ctrl
-set -g prefix C-a
+set-option -g prefix C-a
 bind C-a send-prefix
 unbind C-b
-
-#termset
-set -g default-terminal "screen-256color"
-
-# Fix pasteboard in Sierra
-set-option -g default-command "reattach-to-user-namespace -l fish"
-
-# I demand trackpad respect
-set -g mouse on
-
-# Change command delay short
-set-option -sg escape-time 1
-
-# Start window/session index at 1
-set  -g base-index 1
-setw -g pane-base-index 1
-
-set-option -g set-titles on
-#set-option -g set-titles-string '[#S:#I #H] #W'  # use screen title
-
-# focus events enabled for terminals that support them
-set -g focus-events on
-
-# super useful when using "grouped sessions" and multi-monitor setup
-setw -g aggressive-resize on
 
 # Fuck you spacebar
 unbind Space
 
-# Reload config with r
-bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
-
 # Easier splits
 bind | split-window -h
 bind - split-window -v
+
+# vim power
+set-option -g mode-keys vi
+set-option -g @shell_mode 'vi'
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'V' send -X select-line
+bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel
 
 #ctrl-vim for window
 bind -r C-h select-window -t :-
@@ -48,51 +28,55 @@ bind J resize-pane -D 5
 bind K resize-pane -U 5
 bind L resize-pane -R 5
 
-# vim movement in C-[ mode
-setw -g mode-keys vi
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'V' send -X select-line
-bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
-bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel
+# I demand trackpad respect
+set-option -g mouse on
+
+# Start window/session index at 1
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
+
+set-option -g set-titles on
 
 ## Status Bar
-set -g status on
-set -g status-interval 20
-setw -g monitor-activity on
-setw -g automatic-rename on
-set -g visual-activity on
+set-option -g status-interval 20
+set-option -g visual-activity on
+set-window-option -g monitor-activity on
+set-window-option -g automatic-rename on
 
-set -g status-bg colour234
-set -g status-fg colour248
+set-option -g status-bg colour234
+set-option -g status-fg colour248
 
 set-window-option -g window-status-current-bg green
 set-window-option -g window-status-current-fg black
 
-set -g status-justify centre
+set-option -g status-justify centre
 
-set -g status-left-length 18
-set -g status-left '#(uptime | cut -d ":" -f 4-)'
+set-option -g status-left-length 18
+set-option -g status-left '#(uptime | cut -d ":" -f 4-)'
 
-set -g status-right ' #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+set-option -g status-right ' #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
 
-set-option -g pane-active-border-bg yellow
-set-option -g pane-active-border-fg yellow
+set-window-option -g pane-active-border-bg yellow
+set-window-option -g pane-active-border-fg yellow
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @shell_mode 'vi'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @batt_discharging_icon "🎍 "
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @resurrect-save 'S'
-set -g @resurrect-restore 'R'
-set -g @resurrect-strategy-vim 'session'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'on'
-set -g @continuum-save-interval '60'
+set-option -g @plugin 'tmux-plugins/tpm'
+set-option -g @plugin 'tmux-plugins/tmux-sensible'
+set-option -g @plugin 'christoomey/vim-tmux-navigator'
+set-option -g @plugin 'tmux-plugins/tmux-open'
+set-option -g @plugin 'tmux-plugins/tmux-yank'
+## Battery
+set-option -g @plugin 'tmux-plugins/tmux-battery'
+set-option -g @batt_discharging_icon "🎍 "
+# tpm restore
+set-option -g @plugin 'tmux-plugins/tmux-resurrect'
+set-option -g @resurrect-save 's'
+set-option -g @resurrect-restore 'r'
+set-option -g @resurrect-strategy-vim 'session'
+## tpm continuum
+set-option -g @plugin 'tmux-plugins/tmux-continuum'
+set-option -g @continuum-restore 'on'
+set-option -g @continuum-save-interval '60'
 
 # Sometimes we need to be local
 if '[ -f $HOME/.tmux.local ]' 'source $HOME/.tmux.local'
