--- a/tmux.conf
+++ b/tmux.conf
@@ -49,12 +49,12 @@ set-option -g status-fg colour248
 set-window-option -g window-status-current-bg green
 set-window-option -g window-status-current-fg black
 
-set-option -g status-justify centre
+set-option -g status-justify left
 
-set-option -g status-left-length 18
-set-option -g status-left '#(uptime | cut -d ":" -f 4-)'
+set-option -g status-left-length 1
+set-option -g status-left ''
 
-set-option -g status-right ' #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+set-option -g status-right ' #{battery_status_fg} #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
 
 set-window-option -g pane-active-border-bg yellow
 set-window-option -g pane-active-border-fg yellow
