Plenty of minor tweaks

--- a/tmux.conf
+++ b/tmux.conf
@@ -72,7 +72,7 @@ set-option -g @batt_discharging_icon "🎍 "
 set-option -g @plugin 'tmux-plugins/tmux-resurrect'
 set-option -g @resurrect-save 's'
 set-option -g @resurrect-restore 'r'
-set-option -g @resurrect-strategy-vim 'session'
+set-option -g @resurrect-strategy-nvim 'session'
 ## tpm continuum
 set-option -g @plugin 'tmux-plugins/tmux-continuum'
 set-option -g @continuum-restore 'on'
