--- a/tmux.conf
+++ b/tmux.conf
@@ -67,7 +67,7 @@ set-option -g @plugin 'tmux-plugins/tmux-open'
 set-option -g @plugin 'tmux-plugins/tmux-yank'
 ## Battery
 set-option -g @plugin 'tmux-plugins/tmux-battery'
-set-option -g @batt_discharging_icon "🎍 "
+# set-option -g @batt_discharging_icon "🎍 "
 # tpm restore
 set-option -g @plugin 'tmux-plugins/tmux-resurrect'
 set-option -g @resurrect-save 's'
