--- a/tmux.conf
+++ b/tmux.conf
@@ -45,10 +45,7 @@ set-window-option -g window-status-current-bg green
 set-window-option -g window-status-current-fg black
 
 set-option -g status-justify left
-
-set-option -g status-left-length 1
-set-option -g status-left ''
-
+set-option -g status-left '#S: '
 set-option -g status-right ' #{battery_status_fg} #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
 
 set-window-option -g pane-active-border-bg yellow
@@ -64,7 +61,7 @@ set-option -g @plugin 'tmux-plugins/tmux-yank'
 set-option -g @plugin 'tmux-plugins/tmux-battery'
 # tpm restore
 set-option -g @plugin 'tmux-plugins/tmux-resurrect'
-set-option -g @resurrect-save 's'
+set-option -g @resurrect-save 'S'
 set-option -g @resurrect-restore 'r'
 set-option -g @resurrect-strategy-nvim 'session'
 ## tpm continuum
