Update ale settings & tmux colors
Signed-off-by: Amy Aronsohn <WagThatTail@Me.com>

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -41,15 +41,15 @@ set-window-option -g automatic-rename on
 set-option -g status-bg colour234
 set-option -g status-fg colour248
 
-set-window-option -g window-status-current-bg green
-set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg blue
+set-window-option -g window-status-current-fg white
 
 set-option -g status-justify left
 set-option -g status-left '#S: '
 set-option -g status-right ' #{battery_status_fg} #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
 
-set-window-option -g pane-active-border-bg yellow
-set-window-option -g pane-active-border-fg yellow
+set-window-option -g pane-active-border-bg black
+set-window-option -g pane-active-border-fg blue
 
 # List of plugins
 set-option -g @plugin 'tmux-plugins/tpm'
