--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -57,6 +57,7 @@ set-option -g @plugin 'tmux-plugins/tmux-sensible'
 set-option -g @plugin 'christoomey/vim-tmux-navigator'
 set-option -g @plugin 'tmux-plugins/tmux-open'
 set-option -g @plugin 'tmux-plugins/tmux-yank'
+set-option -g @plugin 'tmux-plugins/tmux-sessionist'
 ## Battery
 set-option -g @plugin 'tmux-plugins/tmux-battery'
 # tpm restore
