FIx local config call
Signed-off-by: Amelia Aronsohn <WagThatTail@Me.com>

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -70,7 +70,7 @@ set-option -g @plugin 'tmux-plugins/tmux-continuum'
 set-option -g @continuum-restore 'on'
 
 # Sometimes we need to be local
-if '[ -f $HOME/.conf/local/tmux.conf 'source $HOME/.conf/local/tmux.conf'
+source-file $HOME/.config/local/tmux.conf
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
