--- a/home/.gnupg/gpg.conf
+++ b/home/.gnupg/gpg.conf
@@ -38,7 +38,7 @@ verify-options show-uid-validity
 
 # This is the server that --recv-keys, --send-keys, and --search-keys will
 # communicate with to receive keys from, send keys to, and search for keys on
-keyserver hkps://pool.sks-keyservers.net
+#keyserver
 
 #-----------------------------
 # algorithm and ciphers
@@ -140,5 +140,5 @@ charset utf-8
 # Use your MIME handler to view photos:
 # photo-viewer "metamail -q -d -b -c %T -s 'KeyID 0x%k' -f GnuPG"
 
-keyserver-options auto-key-retrieve
 keyserver-options no-honor-keyserver-url
+auto-key-retrieve
