Make ALE do rls
Signed-off-by: Amelia Aronsohn <WagThatTail@Me.com>

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -1,5 +1,14 @@
 HashKnownHosts yes
 
+Host pair
+  HostName pairing01.sfo.dnsimple.net
+  IdentityFile ~/.ssh/keys/dnsimple/id_ed25519
+  IdentityFile ~/.ssh/keys/dnsimple/id_rsa
+  ForwardAgent yes
+  ForwardX11Trusted yes
+  ProxyCommand none
+  User opspair
+
 Host colo01.squirrels.wtf bunni2013.local
   ProxyCommand none
   ForwardAgent yes
