Add some ec2 love
Signed-off-by: Amelia Aronsohn <WagThatTail@Me.com>

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -36,6 +36,11 @@ Host *.dnsimple.???
   ForwardAgent yes
   User dos
 
+Host *.us-east-2.compute.amazonaws.com
+  ForwardX11Trusted yes
+  User ubuntu
+  IdentityFile ~/.ssh/keys/aws/us-east-2-2019-05-07.pem
+
 Host 10.* 172.16.* 172.17.* 172.18.* 172.19.* 172.20.* 172.21.* 172.22.* 172.23.* 172.24.* 172.25.* 172.26.* 172.27.* 172.28.* 172.29.* 172.30.* 172.31.* 192.168.*
   PreferredAuthentications publickey,keyboard-interactive,password
   StrictHostKeyChecking no
