--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -9,7 +9,7 @@ Host pair
   ProxyCommand none
   User opspair
 
-Host colo01.squirrels.wtf bunni2013.local
+Host colo01.squirrels.wtf
   ProxyCommand none
   ForwardAgent yes
   User bitm
