Fix file does not exist errors when launching tmux

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -63,7 +63,8 @@ set-option -g @plugin 'tmux-plugins/tmux-continuum'
 set-option -g @continuum-restore 'on'
 
 # Sometimes we need to be local
-source-file $HOME/.config/local/tmux.conf
+if-shell [[ -f "$HOME/.config/local/tmux.conf" ]] \
+  'source-file $HOME/.config/local/tmux.conf'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
