Remove old machine, allow password on random machines

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -1,14 +1,5 @@
 HashKnownHosts yes
 
-Host pair
-  HostName pairing01.sfo.dnsimple.net
-  IdentityFile ~/.ssh/keys/dnsimple/id_ed25519
-  IdentityFile ~/.ssh/keys/dnsimple/id_rsa
-  ForwardAgent yes
-  ForwardX11Trusted yes
-  ProxyCommand none
-  User opspair
-
 Host colo01.squirrels.wtf
   ProxyCommand none
   ForwardAgent yes
@@ -47,7 +38,7 @@ Host 10.* 172.16.* 172.17.* 172.18.* 172.19.* 172.20.* 172.21.* 172.22.* 172.23.
   ProxyCommand none
 
 Host *
-  PreferredAuthentications publickey
+  PreferredAuthentications publickey,keyboard-interactive,password
   ServerAliveInterval 5
   HashKnownHosts yes
   VisualHostKey yes
