Update tmux.conf for 3.0
Signed-off-by: Amelia Aronsohn <squirrel@wearing.black>

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -28,15 +28,15 @@ set-option -g mouse on
 
 # Start window/session index at 1
 set-option -g base-index 1
-set-window-option -g pane-base-index 1
+set-option -w -g pane-base-index 1
 
 set-option -g set-titles on
 
 ## Status Bar
 set-option -g status-interval 20
 set-option -g visual-activity on
-set-window-option -g monitor-activity on
-set-window-option -g automatic-rename on
+set-option -w -g monitor-activity on
+set-option -w -g automatic-rename on
 
 set-option -g status-bg colour234
 set-option -g status-fg colour248
@@ -51,20 +51,19 @@ set-option -g @plugin 'tmux-plugins/tmux-sensible'
 set-option -g @plugin 'christoomey/vim-tmux-navigator'
 set-option -g @plugin 'tmux-plugins/tmux-open'
 set-option -g @plugin 'tmux-plugins/tmux-yank'
-## Battery
+# Battery
 set-option -g @plugin 'tmux-plugins/tmux-battery'
 # tpm restore
 set-option -g @plugin 'tmux-plugins/tmux-resurrect'
 set-option -g @resurrect-save 'S'
 set-option -g @resurrect-restore 'r'
 set-option -g @resurrect-strategy-nvim 'session'
-## tpm continuum
+# tpm continuum
 set-option -g @plugin 'tmux-plugins/tmux-continuum'
-set-option -g @continuum-restore 'on'
+# set-option -g @continuum-restore 'on' # 2019-11-27 this is broken in TMUX 3.0
 
 # Sometimes we need to be local
-if-shell '[[ -f "$HOME/.config/local/tmux.conf" ]]' \
-  'source-file $HOME/.config/local/tmux.conf'
+if-shell '[[ -f "$HOME/.config/local/tmux.conf" ]]' 'source-file $HOME/.config/local/tmux.conf'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run-shell '~/.tmux/plugins/tpm/tpm'
