--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -60,7 +60,7 @@ set-option -g @resurrect-restore 'r'
 set-option -g @resurrect-strategy-nvim 'session'
 # tpm continuum
 set-option -g @plugin 'tmux-plugins/tmux-continuum'
-# set-option -g @continuum-restore 'on' # 2019-11-27 this is broken in TMUX 3.0
+set-option -g @continuum-restore 'on'
 
 # Sometimes we need to be local
 if-shell '[[ -f "$HOME/.config/local/tmux.conf" ]]' 'source-file $HOME/.config/local/tmux.conf'
