--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,5 +1,6 @@
 # neovim color fix?
 set-option -sa terminal-overrides ',screen-256color:RGB'
+
 # Fuck you spacebar
 unbind Space
 
@@ -42,6 +43,7 @@ set-option -w -g automatic-rename on
 
 set-option -g status-bg colour234
 set-option -g status-fg colour248
+set-option -g window-status-current-style bg=colour226,fg=colour234
 
 set-option -g status-justify left
 set-option -g status-left '#S: '
