tmux window renumbering!
Signed-off-by: Amelia Aronsohn <squirrel@wearing.black>

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -35,6 +35,9 @@ set-option -w -g pane-base-index 1
 
 set-option -g set-titles on
 
+# I prefer reordering to splaying numbers
+set-option -g renumber-windows on
+
 ## Status Bar
 set-option -g status-interval 20
 set-option -g visual-activity on
