Fix status length cut
Signed-off-by: Amelia Aronsohn <squirrel@wearing.black>

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -51,6 +51,7 @@ set-option -g window-status-current-style bg=colour226,fg=colour234
 set-option -g status-justify left
 set-option -g status-left '#S: '
 set-option -g status-right ' #{battery_status_fg} #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M'
+set-option -g status-right-length 50
 
 # List of plugins
 set-option -g @plugin 'tmux-plugins/tpm'
